syntax = "proto3";

package user;

service UserService {
  rpc ValidateUser(ValidateUserRequest) returns (UserResponse);
}

message ValidateUserRequest {
  string jwt_token = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string phone = 6;
  repeated Role roles = 7;
}

message Role {
  string id = 1;
  string name = 2;
  repeated Permission permissions = 3;
}

message Permission {
  string id = 1;
  string name = 2;
  string description = 3;
}